@@ -1,10 +1,13 @@
 language: perl
 perl:
-  - "5.19"
+  - "5.20"
   - "5.18"
   - "5.16"
   - "5.14"
   - "5.12"
   - "5.10"
+before_install:
+  cpanm -n Devel::Cover &&
+  cpanm -n Devel::Cover::Report::Coveralls
 script:
-  perl Build.PL && ./Build build 
+  perl Build.PL && ./Build build && cover -test -report coveralls
