@@ -48,6 +48,10 @@ __END__
 
 Mojolicious::Plugin::Form - abstract forms for Mojolicious and DBIx::Class
 
+=for html
+
+<a href="https://travis-ci.org/wollmers/Mojolicious-Plugin-Form"><img src="https://travis-ci.org/wollmers/Mojolicious-Plugin-Form.png" alt="Mojolicious-Plugin-Form"></a>
+<a href='https://coveralls.io/r/wollmers/Mojolicious-Plugin-Form?branch=master'><img src='https://coveralls.io/repos/wollmers/Mojolicious-Plugin-Form/badge.png?branch=master' alt='Coverage Status' /></a>
 
 =head1 SYNOPSIS
 
