@@ -1,6 +1,7 @@
 Revision history for Mojolicious-Plugin-Form.
 
 {{$NEXT}}
+       - adjusted travis
 
 0.003  2014-05-08 14:02:27 CEST
        - release to cpan
